--- a/src/_includes/note.njk
+++ b/src/_includes/note.njk
@@ -32,8 +32,8 @@
     </header>
     <section class="e-content">
       {{ content | safe }}
-      <a href="https://brid.gy/publish/mastodon" style="display: none;"></a>
-      <a href="https://brid.gy/publish/twitter" style="display: none;"></a>
+      <a class="u-url" href="https://brid.gy/publish/mastodon" style="display: none;"></a>
+      <a class="u-url" href="https://brid.gy/publish/twitter" style="display: none;"></a>
     </section>
 
     <footer aria-labelledby="comments">
