--- a/src/_includes/css/typography.css
+++ b/src/_includes/css/typography.css
@@ -34,15 +34,21 @@
   font-display: swap;
 }
 
-@font-face{
+/* @font-face{
   font-family: 'iA Writer Mono';
   src: url('/assets/fonts/iAWriterMonoS-Bold.woff2') format('woff2'),
    url('/assets/fonts/iAWriterMonoS-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-}
+} */
 
+@font-face {
+  font-family: 'iA Writer Mono';
+  src: url('/assets/fonts/iAWriterDuoV.ttf') format("truetype-variations");
+  font-weight: 400 1000;
+  font-display: swap;
+}
 
 body {
   font-family: var(--font-text);
@@ -83,7 +89,6 @@ h2 + * > .h3:first-child,
 h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
   transform: translateY(calc(var(--line-height) * -0.25));
   font-family: var(--font-heading);
-  letter-spacing: 0.7px;
 }
 
 p {
