Display readable dates in overview pages

--- a/src/_includes/bookmarks-overview.njk
+++ b/src/_includes/bookmarks-overview.njk
@@ -1,6 +1,6 @@
 ---
   layout: overview.njk
-  timeSeperatorFormat: DD-MM-YYYY
+  timeSeperatorFormat: Do of MMMM, YYYY
   stylesheets:
     - components/bookmark-filter/bookmark-filter.css
     - components/tag/tag.css
