Make permalink absolute in like

--- a/src/_includes/like.njk
+++ b/src/_includes/like.njk
@@ -13,14 +13,12 @@
       <aside aria-label="post meta-data">
         <small>
           Liked at:
-          <a href="{{ site.url + page.url }}" class="u-url">
           <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD hh:mm:ss') }}">
             {{ date | formatDate('Do of MMMM, YYYY') }}
           </time>
-          </a>
         </small>
         <small>
-          <a class="u-url"  href="{{ page.url }}">permalink<span class="visuallyhidden"> to this like</span></a>
+          <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this like</span></a>
         </small>
       </aside>
     </header>
@@ -28,11 +26,11 @@
     {% if silo === 'mastodon' or silo === 'twitter' %}
       <div class="e-content">
         {% if silo === 'mastodon' %}
-          <a href="https://brid.gy/publish/mastodon"></a>
+          <a class="u-url" href="https://brid.gy/publish/mastodon" hidden></a>
         {% endif %}
 
         {% if silo === 'twitter' %}
-          <a href="https://brid.gy/publish/twitter"></a>
+          <a class="u-url" href="https://brid.gy/publish/twitter" hidden></a>
         {% endif %}
       </div>
     {% endif %}
