--- a/src/_includes/note.njk
+++ b/src/_includes/note.njk
@@ -20,7 +20,9 @@
       <aside aria-label="post meta-data">
         <data class="p-bridgy-omit-link" value="maybe"></data>
         <small>
-          <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this note</span></a>
+          <a class="u-url" href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this note</span></a>
+          <a class="u-url" href="https://brid.gy/publish/mastodon" hidden></a>
+          <a class="u-url" href="https://brid.gy/publish/twitter" hidden></a>
           {% if tweetUrl %}
             <a rel="syndication" href="{{ tweetUrl }}">This note on Twitter</a>
           {% endif %}
@@ -32,9 +34,7 @@
     </header>
     <section class="e-content">
       {{ content | safe }}
-      <a class="u-url" href="https://brid.gy/publish/mastodon" style="display: none;"></a>
-      <a class="u-url" href="https://brid.gy/publish/twitter" style="display: none;"></a>
-    </section>
+    </section>    
 
     <footer aria-labelledby="comments">
       <h2 id="comments">Comments</h2>
