correctly format reply markup

--- a/src/_includes/reply.njk
+++ b/src/_includes/reply.njk
@@ -11,29 +11,27 @@
 {% block content %}
   <article class="reply content-section h-entry">
     <header>
-      <h1><a href="{{ url }}" class="u-in-reply-to">{{ title }}: {{ url }}</a></h1>
+      <h1><a href="{{ url }}" class="u-url u-in-reply-to">{{ title }}: {{ url }}</a></h1>
       <aside aria-label="post meta data">
           <small>
             Published at:
-            <a href="{{ site.url + page.url }}" class="u-url">
             <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD hh:mm:ss') }}">
               {{ date | formatDate('Do of MMMM, YYYY') }}
             </time>
-            </a>
           </small>
           <small>
-            <a class="u-url"  href="{{ page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
+            <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
           </small>
       </aside>
     </header>
     <section class="e-content">
       {{ content | safe }}
       {% if silo === 'mastodon' %}
-        <a href="https://brid.gy/publish/mastodon"></a>
+        <a class="u-url" href="https://brid.gy/publish/mastodon" hidden></a>
       {% endif %}
 
       {% if silo === 'twitter' %}
-        <a href="https://brid.gy/publish/twitter"></a>
+        <a class="u-url" href="https://brid.gy/publish/twitter" hidden></a>
       {% endif %}
     </section>
 
