--- a/src/_includes/home.css
+++ b/src/_includes/home.css
@@ -9,7 +9,8 @@
   padding-right: 1rem;
   padding-bottom: var(--margin-m);
   margin-bottom: var(--margin-m);
-
+  font-family: var(--font-code);
+  font-variation-settings: "wght" 300;
   color: var(--code-keyword);
 }
 @media screen and (min-width: var(--screen-small)) and (max-width: var(--screen-medium)) {
@@ -20,6 +21,7 @@
 
 .my-vision__quote  blockquote {
   border: none;
+  padding: 0;
 }
 
 .my-vision__variable {
