--- a/src/_includes/overview.njk
+++ b/src/_includes/overview.njk
@@ -1,5 +1,5 @@
 ---
-  timeSeperatorFormat: MM-YYYY
+  timeSeperatorFormat: MMMM YYYY
   stylesheets:
    - overview.css
 ---
@@ -20,7 +20,7 @@
     {% if post.url %}
 
     {% if month !== post.date | formatDate(timeSeperatorFormat) %}
-      <h2><span class="visuallyhidden">Items posted in</span>{{ post.date | formatDate('MMMM YYYY') }}</h2>
+      <h2><span class="visuallyhidden">Items posted in</span>{{ post.date | formatDate(timeSeperatorFormat) }}</h2>
       {% set month = post.date | formatDate(timeSeperatorFormat) %}
     {% endif %}
 
@@ -42,10 +42,10 @@
       {% endif %}
       {% if addSyndicationLinks %}
         {% if post.data.tweetUrl %}
-          <small><a rel="syndication" href="{{ post.data.tweetUrl }}">This note on Twitter</a></small>
+          <small><a rel="syndication" href="{{ post.data.tweetUrl }}">This {{ collection }} on Twitter</a></small>
         {% endif %}
-        {% if post.data.mastodonUrl %}
-          <small><a rel="syndication" href="{{ post.data.mastodonUrl }}">This note on toot.cafe</a></small>
+        {% if post.data.tootUrl %}
+          <small><a rel="syndication" href="{{ post.data.tootUrl }}">This {{ collection }} on toot.cafe</a></small>
         {% endif %}
       {% endif %}
       {% if post.data.description %}
