--- a/src/_includes/reply.njk
+++ b/src/_includes/reply.njk
@@ -1,6 +1,7 @@
 ---
   stylesheets:
     - reply.css
+    - components/webmentions/response-form.css
   category: Reply
   og: 
     type: artice
@@ -11,37 +12,63 @@
 {% block content %}
   <article class="reply content-section h-entry">
     <header>
-      <h1><a href="{{ url }}" class="u-in-reply-to">{{ title }}: {{ url }}</a></h1>
+      <h1><a href="{{ url }}" class="u-url u-in-reply-to">{{ title }}</a></h1>
       <aside aria-label="post meta data">
           <small>
-            Published at:
-            <a href="{{ site.url + page.url }}" class="u-url">
+            Replied at:
             <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD hh:mm:ss') }}">
               {{ date | formatDate('Do of MMMM, YYYY') }}
             </time>
-            </a>
           </small>
           <small>
-            <a class="u-url"  href="{{ page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
+            <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
+            {% if tweetUrl %}
+              <a rel="syndication" href="{{ tweetUrl }}">This reply on Twitter</a>
+            {% endif %}
+            {% if tootUrl %}
+              <a rel="syndication" href="{{ tootUrl }}">This reply on toot.cafe</a>
+            {% endif %}
           </small>
       </aside>
     </header>
     <section class="e-content">
       {{ content | safe }}
       {% if silo === 'mastodon' %}
-        <a href="https://brid.gy/publish/mastodon"></a>
+        <a class="u-url" href="https://brid.gy/publish/mastodon" hidden></a>
       {% endif %}
 
       {% if silo === 'twitter' %}
-        <a href="https://brid.gy/publish/twitter"></a>
+        <a class="u-url" href="https://brid.gy/publish/twitter" hidden></a>
       {% endif %}
     </section>
 
-    <footer aria-labelledby="this-is-me">
+    <footer aria-labelledby="comments">
+      <h2 id="comments">Comments</h2>
+
+      <p>
+        I use <a href="https://indieweb.org/Webmention">WebMentions</a> via the <a href="https://indieweb.org">IndieWeb</a>. Do you have a comment? <br />
+        Please respond via a post from your site!
+      </p>
+      <form class="webmentions-response-form" action="https://webmention.io/petergoes.nl/webmention" method="POST">
+        <label for="webmentions-response-form-input">Url of your response</label>
+        <input id="webmentions-response-form-input" type="url" name="source" placeholder="https://example.com/" required />
+        <input type="hidden" name="target" value="{{ site.url + page.url }}" />
+        <button type="submit">Send response</button> 
+      </form>
+
+      {% from './components/webmentions/interaction.njk' import interaction %}
+      {% from './components/webmentions/text-responses.njk' import textResponses %}
+      {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) | removeSyndication(tweetUrl) %}
+      {{ interaction(['like-of', 'repost-of'], 'Like', 'Likes and Reposts', webmentionsForUrl) }}
+      {{ textResponses('in-reply-to', 'Reply', 'Replies', webmentionsForUrl | reverse) }}
+      {{ textResponses('mention-of', 'Mention', 'Mentions', webmentionsForUrl | reverse) }}
+    </footer>
+
+    <aside aria-labelledby="this-is-me">
       <h2 id="this-is-me">This is me</h2>
       {% from './components/h-card/h-card.njk' import hCard %}
       {{ hCard(site.gravatar, 'author') }}
-    </footer>
+    </aside>
   </article>
 
 {% endblock %}
