--- a/src/_includes/note.njk
+++ b/src/_includes/note.njk
@@ -22,7 +22,7 @@
         <small>
           <a class="u-url" href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this note</span></a>
           <a class="u-url" href="https://brid.gy/publish/mastodon" hidden></a>
-          {# <a class="u-url" href="https://brid.gy/publish/twitter" hidden></a> #}
+          <a class="u-url" href="https://brid.gy/publish/twitter" hidden></a>
           {% if tweetUrl %}
             <a rel="syndication" href="{{ tweetUrl }}">This note on Twitter</a>
           {% endif %}
