--- a/src/_includes/reply.njk
+++ b/src/_includes/reply.njk
@@ -14,21 +14,22 @@
     <header>
       <h1><a href="{{ url }}" class="u-url u-in-reply-to">{{ title }}</a></h1>
       <aside aria-label="post meta data">
-          <small>
-            Replied at:
-            <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD hh:mm:ss') }}">
-              {{ date | formatDate('Do of MMMM, YYYY') }}
-            </time>
-          </small>
-          <small>
-            <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
-            {% if tweetUrl %}
-              <a rel="syndication" href="{{ tweetUrl }}">This reply on Twitter</a>
-            {% endif %}
-            {% if tootUrl %}
-              <a rel="syndication" href="{{ tootUrl }}">This reply on toot.cafe</a>
-            {% endif %}
-          </small>
+        <data class="p-bridgy-omit-link" value="maybe"></data>
+        <small>
+          Replied at:
+          <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD hh:mm:ss') }}">
+            {{ date | formatDate('Do of MMMM, YYYY') }}
+          </time>
+        </small>
+        <small>
+          <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
+          {% if tweetUrl %}
+            <a rel="syndication" href="{{ tweetUrl }}">This reply on Twitter</a>
+          {% endif %}
+          {% if tootUrl %}
+            <a rel="syndication" href="{{ tootUrl }}">This reply on toot.cafe</a>
+          {% endif %}
+        </small>
       </aside>
     </header>
     <section class="e-content">
