Add link to replies feed

--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" href="{% imageUrl 'src/_assets/logo.svg', 192, 'png' %}">
     <link rel="feed" href="/blog" />
     <link rel="feed" href="/notes" />
+    <link rel="feed" href="/replies" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
