--- a/src/_includes/overview.njk
+++ b/src/_includes/overview.njk
@@ -26,7 +26,7 @@
 
     <article class="h-entry">
       <h3 class="p-name">
-        <a class="u-url" href="{% if post.data.url %}{{ post.data.url }}{% else %}{{ post.url }}{% endif %}">{{ post.data[titleProperty or 'title'] }}</a>
+        <a {% if not showPermalink %}class="u-url" {% endif %}href="{% if post.data.url %}{{ post.data.url }}{% else %}{{ post.url }}{% endif %}">{{ post.data[titleProperty or 'title'] }}</a>
       </h3>
       {% if showDate %}
         <small>
@@ -37,7 +37,7 @@
       {% endif %}
       {% if showPermalink %}
         <small>
-          <a href="{{ post.url }}">permalink<span class="visuallyhidden"> to {{ post.data.title }}</a>
+          <a class="u-url" href="{{ post.url }}">permalink<span class="visuallyhidden"> to {{ post.data.title }}</a>
         </small>
       {% endif %}
       {% if addSyndicationLinks %}
