--- a/src/_includes/like.njk
+++ b/src/_includes/like.njk
@@ -9,7 +9,7 @@
 {% block content %}
   <article class="like content-section h-entry">
     <header>
-      <h1><a href="{{ url }}" class="u-like-of">{{ title }}: {{ url }}</a></h1>
+      <h1><a href="{{ url }}" class="u-like-of">{{ title }}</a></h1>
       <aside aria-label="post meta-data">
         <small>
           Liked at:
