--- a/src/_includes/reply.njk
+++ b/src/_includes/reply.njk
@@ -24,10 +24,10 @@
         <small>
           <a class="u-url"  href="{{ site.url + page.url }}">permalink<span class="visuallyhidden"> to this reply</span></a>
           {% if tweetUrl %}
-            <a rel="syndication" href="{{ tweetUrl }}">This reply on Twitter</a>
+            <a rel="syndication" class="u_syndication" href="{{ tweetUrl }}">This reply on Twitter</a>
           {% endif %}
           {% if tootUrl %}
-            <a rel="syndication" href="{{ tootUrl }}">This reply on toot.cafe</a>
+            <a rel="syndication" class="u_syndication" href="{{ tootUrl }}">This reply on toot.cafe</a>
           {% endif %}
         </small>
       </aside>
