--- a/src/_includes/overview.njk
+++ b/src/_includes/overview.njk
@@ -42,10 +42,10 @@
       {% endif %}
       {% if addSyndicationLinks %}
         {% if post.data.tweetUrl %}
-          <small><a rel="syndication" href="{{ post.data.tweetUrl }}">This {{ collection }} on Twitter</a></small>
+          <small><a rel="syndication" class="u_syndication" href="{{ post.data.tweetUrl }}">This {{ collection }} on Twitter</a></small>
         {% endif %}
         {% if post.data.tootUrl %}
-          <small><a rel="syndication" href="{{ post.data.tootUrl }}">This {{ collection }} on toot.cafe</a></small>
+          <small><a rel="syndication" class="u_syndication" href="{{ post.data.tootUrl }}">This {{ collection }} on toot.cafe</a></small>
         {% endif %}
       {% endif %}
       {% if post.data.description %}
