--- a/src/_includes/css/main.css
+++ b/src/_includes/css/main.css
@@ -6,6 +6,7 @@
 @import "./core.css";
 @import "./pages/contact.css";
 @import "./pages/home.css";
+@import "./pages/cv.css";
 @import "../components/footer/footer.css";
 @import "../components/h-card/h-card.css";
 @import "../components/header/header.css";
