Update references to employer

--- a/src/_includes/components/h-card/h-card.njk
+++ b/src/_includes/components/h-card/h-card.njk
@@ -15,7 +15,7 @@
   />
   <a rel="{{ rel }}" class="u-url u-uid" href="https://www.petergoes.nl"><span class="p-name"><span class="p-given-name">Peter</span> <span class="p-family-name">Goes</span></span></a>
   <p class="p-note">Open web enthousiast</p>
-  <p><span class="p-job-title">Front-end developer</span> @ <a class="p-org" href="https://www.voorhoede.nl">De Voorhoede</a>
+  <p><span class="p-job-title">Front-end developer</span> @ <a class="p-org" href="https://www.correspondent.nl">De Correspondent</a>
   <p><span class="p-locality">Amsterdam</span>, <span class="p-country-name">The Netherlands</span></p>
 </div>
 {% endmacro %}
