Use custom media for breakpoints

--- a/src/_includes/components/footer/footer.css
+++ b/src/_includes/components/footer/footer.css
@@ -32,7 +32,7 @@
   content: none;
 }
 
-@media (min-width: var(--screen-small)) {
+@media (--screen-small) {
   .footer__other-nav ul {
     flex-direction: row;
   }
